<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SMS_forwarding_model"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
    <!--输入需要转发号码框-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/SMS_in_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SMS_Input">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/SMS_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:digits="1234567890"/>
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/check_button1"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/SMS1_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/check_button1"
            android:layout_centerInParent="true"
            android:text="@string/Is_number_of_firm"/>
        <CheckBox
            android:id="@+id/check_button2"
            android:layout_toStartOf="@id/SMS1_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/check_button2"
            android:layout_centerInParent="true"
            android:text="@string/AlL_number"/>
    </RelativeLayout>
    <!--输入需要转发的谁的号码框-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/SMS_Out_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SMS_Output">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/SMS_Out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:digits="1234567890"/>
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/check_button3"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/check_button3"
            android:layout_centerInParent="true"
            android:text="@string/Is_number_of_firm"/>
    </RelativeLayout>
    <!--确定按钮-->
    <Button
        android:id="@+id/start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/start_service"/>
</LinearLayout>